testing floating banner

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,10 @@ body {
     background: #b54c4c;
     text-align: center;
 }
+
+.MuiAppBar-positionFixed {
+    top: 0;
+    left: auto;
+    right: 0;
+    position: fixed;
+    }
