--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,16 @@ body {
     right: 0;
     position: fixed;
     }
+
+.header {
+    background: #f1f1f1;
+    color: white;
+    position:fixed;
+    top:0;
+    left:100%;
+    width:100%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    }
+
