--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,18 @@ body {
     font-weight: bold;
     }
 
+.top_nav {
+    display: flex;
+    justify-content: space-between;
+    
+    background: #333;
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    }
+
