--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,9 @@
 body {
     margin: 0; 
-    background: #b54c4c;
+    background: #f4f4f4;
     text-align: center;
 }
 
-.MuiAppBar-positionFixed {
-    top: 0;
-    left: auto;
-    right: 0;
-    position: fixed;
-    }
 
 .header {
     background: #f1f1f1;
@@ -18,7 +12,6 @@ body {
     top:0;
     left:100%;
     width:100%;
-    text-align: center;
     font-size: 20px;
     font-weight: bold;
     }
@@ -26,9 +19,9 @@ body {
 .top_nav {
     display: flex;
     justify-content: space-between;
-    
+
     background: #333;
-    color: white;
+    color: rgb(213, 14, 14);
     position: fixed;
     top: 0;
     left: 0;
