--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
     }
 
 welcome_container {
+    margin-top: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
