--- a/styles.css
+++ b/styles.css
@@ -16,18 +16,20 @@ body {
     }
 
 .top_nav {
-    display: flex;
-    justify-content: space-between;
-    background: #333;
-    color: rgb(14, 213, 51);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
+    .top_nav {
+        display: flex;
+        justify-content: bottom;
+        background: #333;
+        color: rgb(14, 213, 51);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
     }
+    
 
 welcome_container {
     margin-top: 150%;
