--- a/styles.css
+++ b/styles.css
@@ -16,24 +16,22 @@ body {
     }
 
 .top_nav {
-    .top_nav {
-        display: flex;
-        justify-content: bottom;
-        background: #333;
-        color: rgb(14, 213, 51);
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
-    }
-    
-
-welcome_container {
-    margin-top: 150%;
     display: flex;
+    justify-content: space-between;
+    background: #333;
+    color: rgb(14, 213, 51);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    }
+
+.welcome_container {
+    display: flex;
+    margin-top: 1500px;
     justify-content: center;
     align-items: center;
     height: 100vh;
