--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     color: white;
     position:fixed;
     top:0;
-    left:100%;
+    left:0;
     width:100%;
     font-size: 20px;
     font-weight: bold;
