--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body, html {
 
 .welcome_container {
     display: flex;
-    margin-top: 1500px;
+    margin-top: 0;
     justify-content: center;
     align-items: center;
     height: 100vh;
