--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,7 @@ body, html {
     height: 60vh; /* Set the height of the container */
     background: hsl(176, 43%, 65%); /* Optional: background color for the team container */
 }
+
+.footer{
+    position: fixed;
+}
